--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="container">
 							<div class="col-md-4 header-w3left">
 								<img src="images/img1.jpg" alt=""/>
-								<div class="header-imgtext-w3ls">
-									<h1>这个笨小孩</h1> 
+								<div class="header-imgtext-w3ls">									<h1>这个笨小孩</h1> 
 									<div class="social-wthree-icons">
 										<ul>
 											<li><a href="#" class="fa fa-facebook icon icon-border facebook"> </a></li>
@@ -57,8 +56,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</ul>
 										<div class="clearfix"> </div>
 									</div>  
-								</div>
-							</div>
+								</div>							</div>
 							<div class="col-md-8 header-w3right"> 
 								<h3 class="agileits-title">ABOUT ME</h3> 
 								<div class="profile-agileinfo"> 
@@ -68,8 +66,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<h5>个人信息</h5>
 										<ul class="address"> 
 											<li> 
-												<b>身高体重</b> : 不详 
-											</li>
+												<b>身高体重</b> : 不详 											</li>
 											<li> 
 												<b>兴趣爱好</b> : 音乐&动漫
 											</li>
@@ -79,8 +76,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</ul>
 									</div>
 									<div class="col-md-4 col-xs-4 profile-grids"> 
-										<i class="fa fa-envelope"></i>
-										<h5>联系方式</h5>
+										<i class="fa fa-envelope"></i>										<h5>联系方式</h5>
 										<ul class="address"> 
 											<li> 
 												<b>电话</b> : +86 178 6519 1739
@@ -104,7 +100,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 												<b>个人主页</b> : <a href="#">www.myresume.com</a>
 											</li>
 											<li> 
-												<b>淘宝小店</b> : <a href="#">example@twitter</a>
+												<b>淘宝小店</b> : <a href="#">尚在评审中，敬请期待</a>
 											</li> 
 										</ul>
 									</div>
