--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 												<b>邮箱</b> : <a href="http://17865191739@163.com"> 17865191739@163.com</a>
 											</li>
 											<li> 
-												<b>个人主页</b> : <a href="#">www.myresume.com</a>
+												<b>个人主页</b> : <a href="#">https://a-little-story.github.io/</a>
 											</li>
 											<li> 
 												<b>淘宝小店</b> : <a href="#">尚在评审中，敬请期待</a>
