--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- Custom Theme files -->
 <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
 <link href="css/style.css" type="text/css" rel="stylesheet" media="all">   
-<link href="css/font-awesome.css" rel="stylesheet">		<!-- font-awesome icons -->   
+ <link href="css/font-awesome.css" rel="stylesheet">		<!-- font-awesome icons -->   
 <link rel="stylesheet" href="css/swipebox.css">    <!-- swipebox -->   
 <!-- //Custom Theme files --> 
 <!-- js -->
@@ -29,7 +29,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <link href="//fonts.googleapis.com/css?family=Kurale" rel="stylesheet">
 <link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 <!-- //web-fonts -->
-</head>
+ </head>
 <body>  
 	<!-- main --> 
 	<div class="buttons-wrapper"> 
@@ -39,7 +39,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<input id="slide4" class="w3slider-input" type="radio" name="slider"> 
 		<ul class="slider">
 			<li class="agileits"> 
-				<!-- banner -->
+ 				<!-- banner -->
 				<div class="banner">
 					<div class="banner-w3lsinfo">
 						<h2>呆毛之家</h2>
@@ -49,7 +49,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<div class="header-imgtext-w3ls">									<h1>这个笨小孩</h1> 
 									<div class="social-wthree-icons">
 										<ul>
-											<li><a href="#" class="fa fa-facebook icon icon-border facebook"> </a></li>
+ 											<li><a href="#" class="fa fa-facebook icon icon-border facebook"> </a></li>
 											<li><a href="#" class="fa fa-twitter icon icon-border twitter"> </a></li>
 											<li><a href="#" class="fa fa-google-plus icon icon-border googleplus"> </a></li>
 											<li><a href="#" class="fa fa-dribbble icon icon-border dribbble"> </a></li> 
@@ -59,7 +59,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								</div>							</div>
 							<div class="col-md-8 header-w3right"> 
 								<h3 class="agileits-title">ABOUT ME</h3> 
-								<div class="profile-agileinfo"> 
+ 								<div class="profile-agileinfo"> 
 									<p>在校大学生一枚，身无长处成绩一般，心比天高脸比纸薄，胆子不大人品尚可，爱游戏爱动漫爱音乐，无学历无背景无技术，资深型月厨，万年青铜坑，姑且可以划分至人畜无害之类。经历浅薄不值一晒，但有一个上进的小红心，自认勉强算为保值潜力股，欢迎交友留言刷FB。</p>
 									<div class="col-md-4 col-xs-4 profile-grids"> 
 										<i class="fa fa-user"></i>
@@ -69,7 +69,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 												<b>身高体重</b> : 不详 											</li>
 											<li> 
 												<b>兴趣爱好</b> : 音乐&动漫
-											</li>
+ 											</li>
 											<li> 
 												<b>个人职业</b> : 专业20年学生党
 											</li> 
@@ -79,7 +79,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<i class="fa fa-envelope"></i>										<h5>联系方式</h5>
 										<ul class="address"> 
 											<li> 
-												<b>电话</b> : +86 178 6519 1739
+ 												<b>电话</b> : +86 178 6519 1739
 											</li> 
 											<li> 
 												<b>QQ</b> :  1023135024
@@ -89,7 +89,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 											</li>
 										</ul>
 									</div>
-									<div class="col-md-4 col-xs-4 profile-grids"> 
+ 									<div class="col-md-4 col-xs-4 profile-grids"> 
 										<i class="fa fa-share-alt"></i>
 										<h5>更多注释</h5>
 										<ul class="address"> 
@@ -99,7 +99,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 											<li> 
 												<b>个人主页</b> : <a href="#">https://a-little-story.github.io/</a>
 											</li>
-											<li> 
+ 											<li> 
 												<b>淘宝小店</b> : <a href="#">尚在评审中，敬请期待</a>
 											</li> 
 										</ul>
@@ -109,7 +109,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="clearfix"> </div>
 						</div>
-					</div>
+ 					</div>
 				</div>
 				<!-- //banner --> 
 			</li>
@@ -119,7 +119,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="container">  
 						<div class="col-md-8 skills-w3lsleft">
 							<h3 class="agileits-title">计图未来我之见</h3> 
-							<p>随着计算机技术的快速发展，越来越强的硬件能力和不断涌现出来的更加优秀的算法让计算机图形学获得了极大的发展，生活中涉及到图形学的方面也越来越多，应用也变得越来越深入，从游戏界面到动漫电影的渲染，计算机图形学也变得和我们的生活越来越相关。未来，我相信计算机图形学会获得更加长足的发展，越来越精致的游戏画质背后必然少不了计算机图形学的支撑，逼真的特效渲染也需要更加成熟的计算机图形学来更上一层楼，这么巨大的市场需求必然推进计算机图形学的发展，并给我们的生活带来更加深刻的影响。</p>
+ 							<p>随着计算机技术的快速发展，越来越强的硬件能力和不断涌现出来的更加优秀的算法让计算机图形学获得了极大的发展，生活中涉及到图形学的方面也越来越多，应用也变得越来越深入，从游戏界面到动漫电影的渲染，计算机图形学也变得和我们的生活越来越相关。未来，我相信计算机图形学会获得更加长足的发展，越来越精致的游戏画质背后必然少不了计算机图形学的支撑，逼真的特效渲染也需要更加成熟的计算机图形学来更上一层楼，这么巨大的市场需求必然推进计算机图形学的发展，并给我们的生活带来更加深刻的影响。</p>
 						<!--<div class="skill-agileinfo">
 								<div class="skillbar" data-percent="98">
 									<span class="skillbar-title" style="background: #d35400;">HTML5</span>
@@ -129,7 +129,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<!-- End Skill Bar --> 
 							 
 							<!--<div class="skillbar" data-percent="99">
-									<span class="skillbar-title" style="background: #2980b9;">CSS3</span>
+ 									<span class="skillbar-title" style="background: #2980b9;">CSS3</span>
 									<p class="skillbar-bar" style="background: #3498db;"></p>
 									<span class="skill-bar-percent"></span>
 								</div>
@@ -139,7 +139,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<p class="skillbar-bar" style="background: #2c3e50;"></p>
 									<span class="skill-bar-percent"></span>
 								</div>
-								<!-- End Skill Bar --> 
+ 								<!-- End Skill Bar --> 
 							<!--<div class="skillbar" data-percent="70">
 									<span class="skillbar-title" style="background: #46465e;">PHP</span>
 									<p class="skillbar-bar" style="background: #5a68a5;"></p>
@@ -149,7 +149,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<!--</div>    --> 
 							
 						</div>
-						<div class="col-md-4 services">
+ 						<div class="col-md-4 services">
 							<h3 class="agileits-title">计图应用</h3>  
 							<div class="serv-wthree-row w3layouts">
 								<div class="col-xs-3 services-w3lsleft">
@@ -159,7 +159,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<h4>制造业</h4>
 									<p>制造业中产品的设计要经过概念设计、结构分析和优化、
 									仿真模拟等几个主要阶段，计图在各个阶段都有所应用。</p>
-								</div>
+ 								</div>
 								<div class="clearfix"> </div>
 							</div>
 							<div class="serv-wthree-row w3layouts serv-wthree-rowmdl">
@@ -169,7 +169,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<div class="col-xs-9 services-w3lsright">
 									<h4>工程设计</h4>
 									<p>计图可以在建筑设计、设备设计、城市规划和水利工程设计中大展身手，通过虚拟的呈现可以帮助人们更好的设计实施。</p>
-								</div>
+ 								</div>
 								<div class="clearfix"> </div>
 							</div>
 							<div class="serv-wthree-row w3layouts">
@@ -179,21 +179,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<div class="col-xs-9 services-w3lsright">
 									<h4>科学可视化</h4>
 									<p>将图像生成技术和图像理解技术结合在一起，将数据转化为集合图形在屏幕上显示交互， 成为发现和理解科学计算过程的有力工具。</p>
-								</div>
+ 								</div>
 								<div class="clearfix"> </div>
-							</div>
-							<div class="serv-wthree-row w3layouts">
+							</div>							<div class="serv-wthree-row w3layouts">
 								<div class="col-xs-3 services-w3lsleft">
 									<span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
 								</div>
 								<div class="col-xs-9 services-w3lsright">
 									<h4>电影特效</h4>
 									<p>运用计算机图形技术，可以许多令人瞠目结舌、叹为观止的电影特效，为电影增光添彩，给人们带来别样的享受。</p>
-								</div>
+ 								</div>
 								<div class="clearfix"> </div>
 							</div>
-						</div>  
-						<div class="clearfix"> </div>
+						</div>  						<div class="clearfix"> </div>
 					</div>
 				</div>
 				<!-- //skills --> 
@@ -203,8 +201,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="work agileits-w3layouts">
 					<div class="container">  
 						<div class="col-md-6 work-agile-left">
-							<h3 class="agileits-title">相关网站</h3> 
-							<div class="panel-group w3l_panel_group_faq" id="accordion" role="tablist" aria-multiselectable="true">
+							<h3 class="agileits-title">相关网站</h3> 							<div class="panel-group w3l_panel_group_faq" id="accordion" role="tablist" aria-multiselectable="true">
 								<div class="panel panel-default">
 									<div class="panel-heading" role="tab" id="headingOne">
 										<h4 class="panel-title asd">
@@ -214,8 +211,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</h4>
 									</div>
 									<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-										<div class="panel-body panel_text">
-										<!--<h5>入门介绍 </h5>  -->
+										<div class="panel-body panel_text">										<!--<h5>入门介绍 </h5>   -->
 											<a href="http://baike.baidu.com/link?url=ZpRA3XCpamvBPA7L9QjHw9dVD0sWyy_k-897MXn-KhFoZ30ktVaHF4KX6U4OKZYvFMPy0-4YdEdbL7HjZEV1fv6Qh9UTHdZcYkIjqdh5ukMfCzalYttSc3DHJg-Pc2-5kr_DrhYrad_yVsNBJ9nNpK"> 计算机图形学百度百科</a>
 										</div>
 									</div>
@@ -223,11 +219,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<div class="panel panel-default">
 									<div class="panel-heading" role="tab" id="headingTwo">
 										<h4 class="panel-title asd">
-											<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-												<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i> 深入提升
+											<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">												<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i> 深入提升
 											</a>
-										</h4>
-									</div>
+										</h4>									</div>
 									<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 										<div class="panel-body panel_text">
 										<!--<h5>Company Name </h5>  -->
@@ -245,26 +239,24 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									</div>
 									<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 										<div class="panel-body panel_text">
-										<!--<h5>Company Name </h5>  -->
-											<a href="#" > 暂无</a>
+										<!--<h5>Company Name </h5>  -->											<a href="#" > 暂无</a>
 										</div>
 									</div>
 								</div>
 							</div> 
-							<h3 class="agileits-title agileits-title2">社会相关</h3> 
+							<h3 class="agileits-title agileits-title2">My projects</h3> 
 							<div class="panel-group w3l_panel_group_faq" role="tablist" id="accordion1">
 								<div class="panel panel-default">
 									<div class="panel-heading" role="tab" id="headingfour">
 										<h4 class="panel-title asd">
-											<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefour" aria-expanded="true" aria-controls="collapsefour">
-												<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i> 知乎天地
+											<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefour" aria-expanded="true" aria-controls="collapsefour">												<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i> 知乎天地
 											</a>
 										</h4>
 									</div>
 									<div id="collapsefour" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingfour">
 										<div class="panel-body panel_text">
 										<!--<h5></h5>-->
-											<a href="https://www.zhihu.com/question/29182519" > 听说计算机技术的大厦已经建成了？</a>
+											<a href="lab2.html" > lab2</a>
 										</div>
 									</div>
 								</div>
@@ -286,14 +278,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div> 
 						</div> 
 						<div class="col-md-6 work-agile-right"> 
-							<h3 class="agileits-title">My Projects</h3> 
+							<h3 class="agileits-title">Working</h3> 
 							<!-- Projects -->
 							<div class="Projects">  
 								<div class="col-md-6 col-sm-6 col-xs-6 agileits-img"> 
 									<a href="images/g1.jpg" class="swipebox" title="Lorem ipsum dolor">
 										<img class="img-responsive " src="images/g1.jpg" alt=""  /> 
 										<div class="wthree-pcatn">
-											<h4>My Project</h4>  
+											<h4>My Projec</h4>  
 										</div> 
 									</a>  
 								</div>
