--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- //skills --> 
 			</li>
 			<li class="agileits"> 
-				<!-- work --> 
-				<div class="work agileits-w3layouts">
+				<!-- work --> 				<div class="work agileits-w3layouts">
 					<div class="container">  
 						<div class="col-md-6 work-agile-left">
 							<h3 class="agileits-title">相关网站</h3> 							<div class="panel-group w3l_panel_group_faq" id="accordion" role="tablist" aria-multiselectable="true">
@@ -208,8 +207,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 											<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 												<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i> 入门介绍
 											</a>
-										</h4>
-									</div>
+										</h4>									</div>
 									<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 										<div class="panel-body panel_text">										<!--<h5>入门介绍 </h5>   -->
 											<a href="http://baike.baidu.com/link?url=ZpRA3XCpamvBPA7L9QjHw9dVD0sWyy_k-897MXn-KhFoZ30ktVaHF4KX6U4OKZYvFMPy0-4YdEdbL7HjZEV1fv6Qh9UTHdZcYkIjqdh5ukMfCzalYttSc3DHJg-Pc2-5kr_DrhYrad_yVsNBJ9nNpK"> 计算机图形学百度百科</a>
@@ -219,8 +217,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<div class="panel panel-default">
 									<div class="panel-heading" role="tab" id="headingTwo">
 										<h4 class="panel-title asd">
-											<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">												<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i> 深入提升
-											<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i> lab2
+											<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">												<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i> 深入提升											<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i> lab2
 											</a>
 										</h4>									</div>
 									<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
@@ -250,7 +247,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<div class="panel panel-default">
 									<div class="panel-heading" role="tab" id="headingfour">
 										<h4 class="panel-title asd">
-											<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefour" aria-expanded="true" aria-controls="collapsefour">												<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i> 知乎天地
+											<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefour" aria-expanded="true" aria-controls="collapsefour">												
 												<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>lab2
 											</a>
 										</h4>
