--- a/index.html
+++ b/index.html
@@ -248,14 +248,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<div class="panel-heading" role="tab" id="headingfour">
 										<h4 class="panel-title asd">
 											<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefour" aria-expanded="true" aria-controls="collapsefour">												
-												<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>lab2实验报告											
+												<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>lab2											
 </a>
 										</h4>
 									</div>
 									<div id="collapsefour" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingfour">
 										<div class="panel-body panel_text">
 										<!--<h5></h5>-->
-											<a href="lab2.html" > lab2</a>
+											<a href="lab2.html" > lab2实验报告</a>
 										</div>
 									</div>
 								</div>
