--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="panel-body panel_text">
 										<!--<h5></h5>-->
 											<a href="lab2.html" > lab2实验报告</a><br>
-											<a href="lab3.html" > lab3实验报告</a>
+											<a href="lab3.html" > lab3实验报告</a><br>
+											<a href="lab4.html" > lab4实验报告</a>
 										</div>
 									</div>
 								</div>
