--- a/index.html
+++ b/index.html
@@ -222,8 +222,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</h4>									</div>
 									<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 										<div class="panel-body panel_text">
-										<!--<h5>Company Name </h5>  -->
-											<a href="#" > 暂无</a>
+										<!--<h5>Company Name </h5>  -->											<a href="#" > 暂无</a>
 										</div>
 									</div>
 								</div>
@@ -257,7 +256,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<!--<h5></h5>-->
 											<a href="lab2.html" > lab2实验报告</a><br>
 											<a href="lab3.html" > lab3实验报告</a><br>
-											<a href="lab4.html" > lab4实验报告</a>
+											<a href="lab4.htm" > lab4实验报告</a>
 										</div>
 									</div>
 								</div>
